--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,10 @@
   box-sizing: border-box;
 }
 
+ul {
+  list-style-type: none;
+}
 body {
-  background-color: red;
   height: 100vh;
 }
 
@@ -15,10 +17,40 @@ body {
 }
 
 nav {
+  height: 60px;
+  font-size: 18px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 nav img {
-  width: 120px;
+  width: 140px;
   height: auto;
+}
+
+nav ul li,
+nav ul li a {
+  display: inline-block;
+  text-decoration: none;
+  color: grey;
+  padding: 0 5px;
+}
+
+#right-margin {
+  margin-right: 300px;
+}
+nav ul li button {
+  font-size: 15px;
+  width: 90px;
+  height: 30px;
+  color: blue;
+  border: 1px solid blue;
+  background-color: white;
+  border-radius: 3px;
+}
+
+nav ul li button:hover {
+  background-color: blue;
+  color: white;
 }
