--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@ body {
   height: 100vh;
 }
 
+.h2, h2 {
+font-size: 30px;
+margin-top: 20px;
+margin-bottom: 10px;
+}
+
 .width70 {
   width: 70%;
   margin: 0 auto;
@@ -169,4 +175,71 @@ section.mysection2 h6 a{
   color: #337ab7;
   text-decoration: none;
   font-size: 15px;
+}
+
+/*CSS for Section 3*/
+
+.mysection3 {
+padding: 35px 0;
+text-align: center;
+}
+
+section.mysection3 p,
+section.mysection2 p {
+  color: grey;
+  font-size: 20px;
+}
+
+.box {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.box2 {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+.myborder-list {
+  border-left: 1px solid grey;
+}
+
+div.myborder-list ul {
+  list-style: none;
+  margin-top: 30px;
+  padding-left: 30px;
+}
+
+div.myborder-list ul li {
+  padding-right: 100%;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  font-size: 20px;
+  color: grey;
+}
+
+div.myborder-list ul li:hover {
+  color: blue;
+  text-decoration: underline;
+}
+
+div.box2 > div {
+  width: 40%;
+  margin-top: 20px;
+  margin-left: 10%;
+}
+
+div.box2 img {
+  margin-top: 40px;
+  display: block;
+}
+
+div.box2 h3,
+div.box2 p {
+  text-align: left;
+}
+
+div.box2 p{
+  margin-bottom: 30px;
 }
