--- a/css/style.css
+++ b/css/style.css
@@ -324,3 +324,32 @@ table.table tr td a:hover{
 .table>tbody>tr>td:hover {
   color: red;
 }
+
+
+/*CSS for Section 7*/
+
+.mysection7 {
+  background-color: #f3f5f9;
+  text-align: center;
+  padding: 35px 0;
+}
+
+section.mysection7 h2{
+  background-color: #f3f5f9;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+section.mysection7 p{
+  font-size: 20px;
+  margin: 50px 0;
+}
+
+section.mysection7 h6{
+  margin-bottom: 20px;
+}
+
+section.mysection7 i.fa-chevron-left,
+section.mysection7 i.fa-chevron-right{
+  font-size: 30px;
+}
