--- a/css/style.css
+++ b/css/style.css
@@ -353,3 +353,26 @@ section.mysection7 i.fa-chevron-left,
 section.mysection7 i.fa-chevron-right{
   font-size: 30px;
 }
+
+/*CSS for Section 8*/
+.mysection8 {
+  background-color: blue;
+  padding: 50px 0;
+  text-align: center;
+  color: white;
+}
+
+.mysection7-button {
+  margin-top: 30px;
+  height: 50px;
+  width: 200px;
+  background-color: white;
+  color: blue;
+  margin-bottom: 2px;
+  border-radius: 5px;
+}
+
+.mysection7-button:hover {
+  background-color: red;
+  color: white;
+}
